styling bug fixed on smaller mobile devices

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -111,3 +111,9 @@ nav ul li a:hover{
         padding-right: 45px;
     }
 }
+
+@media(min-width: 300px){
+    label.logo{
+        font-size: 20px;
+    }
+}
